@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 21;
+use Test::More tests => 26;
 use Test::Exception;
 use Test::Deep;
 use File::Temp qw/tempdir/;
@@ -70,7 +70,7 @@ my $rna_gen;
   } 'no error creating an object';
 
   is ($rna_gen->id_run, 12597, 'id_run inferred correctly');
-  ok ((not $rna_gen->_is_v4_run), 'not V4') or diag $rna_gen->flowcell_id;
+  ok ((not $rna_gen->_has_newer_flowcell), 'not HT V4 or RR V2') or diag $rna_gen->flowcell_id;
 
   my $args = {};
   $args->{'4003'} = qq{bash -c '\ mkdir -p $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/tmp_\$LSB_JOBID/12597_4#3 ; cd $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/tmp_\$LSB_JOBID/12597_4#3 && vtfp.pl -s -keys samtools_executable -vals samtools1 -keys cfgdatadir -vals \$(dirname \$(readlink -f \$(which vtfp.pl)))/../data/vtlib/ -keys aligner_numthreads -vals `echo \$LSB_MCPU_HOSTS | cut -d " " -f2` -keys indatadir -vals $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/lane4 -keys outdatadir -vals $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane4 -keys af_metrics -vals 12597_4#3.bam_alignment_filter_metrics.json -keys rpt -vals 12597_4#3 -keys reference_dict -vals $dir/references/Mus_musculus/NCBIm37/all/picard/mm_ref_NCBI37_1.fasta.dict -keys reference_genome_fasta -vals $dir/references/Mus_musculus/NCBIm37/all/fasta/mm_ref_NCBI37_1.fasta -keys phix_reference_genome_fasta -vals $phix_ref -keys alignment_filter_jar -vals $odir/t/bin/software/solexa/bin/aligners/illumina2bam/Illumina2bam-tools-1.00/AlignmentFilter.jar -keys alignment_reference_genome -vals $dir/references/Mus_musculus/NCBIm37/all/bowtie2/mm_ref_NCBI37_1.fasta -keys library_type -vals fr-firststrand -keys transcriptome_val -vals $dir/transcriptomes/Mus_musculus/ensembl_67_transcriptome/NCBIm37/tophat2/NCBIm37.known -keys alignment_method -vals tophat2 \$(dirname \$(dirname \$(readlink -f \$(which vtfp.pl))))/data/vtlib/alignment_wtsi_stage2_template.json > run_12597_4#3.json && viv.pl -s -x -v 3 -o viv_12597_4#3.log run_12597_4#3.json  } .
@@ -132,7 +132,6 @@ cmp_deeply(\@lines, [$json ], 'correct json file content (for dUTP library)');
       repository        => $dir,
       no_bsub           => 1,
       force_phix_split  => 1,
-      ###uncomment to check V4 failure, flowcell_id=>'C333TANXX',
     )
   } 'no error creating an object (forcing on phix split)';
 
@@ -140,19 +139,51 @@ cmp_deeply(\@lines, [$json ], 'correct json file content (for dUTP library)');
 
   $args->{'5040'} = qq{bam_alignment.pl --spiked_phix_split --id_run 12597 --position 5 --tag_index 40 --input $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/lane5/12597_5#40.bam --output_prefix $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/lane5/12597_5#40 --do_markduplicates  --is_paired_read};
  
- lives_ok {$rna_gen->_generate_command_arguments([5])}
+  lives_ok {$rna_gen->_generate_command_arguments([5])}
      'no error generating command arguments for non-RNASeq lane';
 
- is ($rna_gen->_job_args->{'5040'},$args->{'5040'},'correct non-RNASeq lane args generated');
+  is ($rna_gen->_job_args->{'5040'},$args->{'5040'},'correct non-RNASeq lane args generated');
 
 #### monoplex (non-RNA Seq)
 
-lives_ok {$rna_gen->_generate_command_arguments([1])}
+  lives_ok {$rna_gen->_generate_command_arguments([1])}
      'no error generating command arguments for non-multiplex lane';
 
- $args->{'1'} = qq{bam_alignment.pl --spiked_phix_split --id_run 12597 --position 1 --input $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/12597_1.bam --output_prefix $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/12597_1 --do_markduplicates  --is_paired_read};
+  $args->{'1'} = qq{bam_alignment.pl --spiked_phix_split --id_run 12597 --position 1 --input $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/12597_1.bam --output_prefix $dir/140409_HS34_12597_A_C333TACXX/Data/Intensities/BAM_basecalls_20140515-073611/no_cal/archive/12597_1 --do_markduplicates  --is_paired_read};
 
- is ($rna_gen->_job_args->{'1'},$args->{'1'},'correct non-multiplex lane args generated');
+  is ($rna_gen->_job_args->{'1'},$args->{'1'},'correct non-multiplex lane args generated');
+
+  ok((not $rna_gen->_has_newer_flowcell), 'HT V3 flowcell recognised as older flowcell');
+#### check for newer flowcells
+  lives_ok {
+    $rna_gen = npg_pipeline::archive::file::generation::seq_alignment->new(
+      run_folder        => $runfolder,
+      runfolder_path    => $runfolder_path,
+      recalibrated_path => $bc_path,
+      timestamp         => q{2014},
+      verbose           => 1,
+      repository        => $dir,
+      no_bsub           => 1,
+      force_phix_split  => 1,
+      flowcell_id       => 'C333TBCXX',
+    )
+  } 'no error creating an object with RR V2 flowcell (forcing on phix split)';
+  ok ($rna_gen->_has_newer_flowcell, 'RR V2 flowcell recognised as newer flowcell');
+
+  lives_ok {
+    $rna_gen = npg_pipeline::archive::file::generation::seq_alignment->new(
+      run_folder        => $runfolder,
+      runfolder_path    => $runfolder_path,
+      recalibrated_path => $bc_path,
+      timestamp         => q{2014},
+      verbose           => 1,
+      repository        => $dir,
+      no_bsub           => 1,
+      force_phix_split  => 1,
+      flowcell_id       => 'C333TANXX',
+    )
+  } 'no error creating an object with HT V4 flowcell (forcing on phix split)';
+  ok ($rna_gen->_has_newer_flowcell, 'HT V4 flowcell recognised as newer flowcell');
 
 }
 
